--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,66 +1,56 @@
 {
-  "l10nTabName": {
-    "message":"Localization"
-    ,"description":"name of the localization tab"
-  }
-  ,"l10nHeader": {
-    "message":"It does localization too! (this whole tab is, actually)"
-    ,"description":"Header text for the localization section"
-  }
-  ,"l10nIntro": {
-    "message":"'L10n' refers to 'Localization' - 'L' an 'n' are obvious, and 10 comes from the number of letters between those two.  It is the process/whatever of displaying something in the language of choice.  It uses 'I18n', 'Internationalization', which refers to the tools / framework supporting L10n.  I.e., something is internationalized if it has I18n support, and can be localized.  Something is localized for you if it is in your language / dialect."
-    ,"description":"introduce the basic idea."
-  }
-  ,"l10nProd": {
-    "message":"You <strong>are</strong> planning to allow localization, right?  You have <em>no idea</em> who will be using your extension!  You have no idea who will be translating it!  At least support the basics, it's not hard, and having the framework in place will let you transition much more easily later on."
-    ,"description":"drive the point home.  It's good for you."
-  }
-  ,"l10nFirstParagraph": {
-    "message":"When the options page loads, elements decorated with <strong>data-l10n</strong> will automatically be localized!"
-    ,"description":"inform that <el data-l10n='' /> elements will be localized on load"
-  }
-  ,"l10nSecondParagraph": {
-    "message":"If you need more complex localization, you can also define <strong>data-l10n-args</strong>.  This should contain <span class='code'>$containerType$</span> filled with <span class='code'>$dataType$</span>, which will be passed into Chrome's i18n API as <span class='code'>$functionArgs$</span>.  In fact, this paragraph does just that, and wraps the args in mono-space font.  Easy!"
-    ,"description":"introduce the data-l10n-args attribute.  End on a lame note."
-    ,"placeholders": {
-      "containerType": {
-        "content":"$1"
-        ,"example":"'array', 'list', or something similar"
-        ,"description":"type of the args container"
-      }
-      ,"dataType": {
-        "content":"$2"
-        ,"example":"string"
-        ,"description":"type of data in each array index"
-      }
-      ,"functionArgs": {
-        "content":"$3"
-        ,"example":"arguments"
-        ,"description":"whatever you call what you pass into a function/method.  args, params, etc."
-      }
-    }
-  }
-  ,"l10nThirdParagraph": {
-    "message":"Message contents are passed right into innerHTML without processing - include any tags (or even scripts) that you feel like.  If you have an input field, the placeholder will be set instead, and buttons will have the value attribute set."
-    ,"description":"inform that we handle placeholders, buttons, and direct HTML input"
-  }
-  ,"l10nButtonsBefore": {
-    "message":"Different types of buttons are handled as well.  &lt;button&gt; elements have their html set:"
-  }
-  ,"l10nButton": {
-    "message":"in a <strong>button</strong>"
-  }
-  ,"l10nButtonsBetween": {
-    "message":"while &lt;input type='submit'&gt; and &lt;input type='button'&gt; get their 'value' set (note: no HTML):"
-  }
-  ,"l10nSubmit": {
-    "message":"a <strong>submit</strong> value"
-  }
-  ,"l10nButtonsAfter": {
-    "message":"Awesome, no?"
-  }
-  ,"l10nExtras": {
-    "message":"You can even set <span class='code'>data-l10n</span> on things like the &lt;title&gt; tag, which lets you have translatable page titles, or fieldset &lt;legend&gt; tags, or anywhere else - the default <span class='code'>Boil.localize()</span> behavior will check every tag in the document, not just the body."
-    ,"description":"inform about places which may not be obvious, like <title>, etc"
+  "appName": {
+    "message": "eMag price tracker"
+  },
+  "appDesc": {
+    "message": "Track price evolution on emag.ro"
+  },
+  "home_about": {
+    "message": "About this app"
+  },
+  "home_description": {
+    "message": "By using this app you can keep track of price evolution for certain products that you mark yourself on emag.ro"
+  },
+  "home_how": {
+    "message": "How does it work?"
+  },
+  "home_how_text": {
+    "message": "When browsing emag sites the app will add a 'track price' button for trackable products. On clicking it the product is marked as favorite within this app. As a result, a scan of all marked products will be made at given timeout intervals (it will run once per day regardless of timeout value). However, lower values are better suited for less frequent use of your device. (i.e. it should ensure the scan runs daily)"
+  },
+  "home_useractions": {
+    "message": "User actions"
+  },
+  "home_useractions_text": {
+    "message": "As a user you can add/remove tracked products. You can also filter them by name or PID."
+  },
+  "home_settings": {
+    "message": "User settings"
+  },
+  "home_settings_text": {
+    "message": "This apps comes along with some default settings you may change:"
+  },
+  "home_settings_onlinedata": {
+    "message": "Online data - you may choose to use shared data (e.g. another user might have been previously tracking one of your favorite products, so when using online-'shared' data you will gain access to its price history so far). Alternately, when not using online data, loading of product price history will be faster and consistent. As a side note, upload of scan data occurs regardless of user settings."
+  },
+  "home_settings_language": {
+    "message": "Language - switch app language"
+  },
+  "home_settings_allownotifications": {
+    "message": "Allow notifications - choose if this app should show you notifications, if you turn this off all notifications (including error messages) will be turned off"
+  },
+  "home_settings_pricevariation": {
+    "message": "Price variation - specify if you're interested in price increases or decreases. You will see them as a number in the app's badge after each scan."
+  },
+  "home_settings_timeout": {
+    "message": "Timeout - choose how often the timer should try to launch the scan. If already scanned for today, it will do nothing"
+  },
+  "home_settings_scannow": {
+    "message": "Scan now - Triggers a price scan for all products, regardless of whether it has already been made or not"
+  },
+  "home_otherinfo": {
+    "message": "Other information"
+  },
+  "home_otherinfo_text": {
+    "message": "This is free open source software. No user data or other actions aside from those mentioned in this page are held. Feel free to report any problems/data inconsistencies/abuse on the chrome extension page. Thanks for using this and share!"
   }
 }
